--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,10 @@ pydantic>=2.12
 pytest>=9.0
 black>=25.12.0
 torch>=2.9
+# torchvision>=0.24
 sentence-transformers>=5.2
-numpy>=2.4.0
+numpy>=2.2.0
 transformers>=4.57
+opencv-python>=4.12.0
+# pillow>=12.1.0
+git+https://github.com/openai/CLIP.git
